--- a/controller.html
+++ b/controller.html
@@ -198,6 +198,7 @@ else{
           
           
 RESIZE    
+          "intervention/image": "^3.0",
 composer require intervention/image
 use Image;
 composer.json
