--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
                   <a href="./debugbar.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">debugbar</a>
                   <a href="./wordpress.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">wordpress</a>
                   <a href="./scroll_top.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">scroll_top</a>
+                  <a href="./pc.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">PC Faster</a>
                   <a href="./" class="btn btn-outline-success fw-bold mb-2" target="_blank"></a>
 
 
