--- a/vs_code.html
+++ b/vs_code.html
@@ -16,6 +16,13 @@ shift+alt+f  ->[auto indent]
 ctrl+/  ->[comment for all]
 shift+alt+down_arrow  ->[duplicate line or selected]
 alt+down_arrow ->[exchange this line]
+
+Extensions
+----------------------------------------------
+Live Server -Ritwick Dey
+Auto Rename Tag -Jun Han
+Prettier - Code formatter -Prettier
+PHP Namespace Resolver -Mehedi Hassan
         </textarea>
       </div>
     </div>
