--- a/vs_code.html
+++ b/vs_code.html
@@ -23,6 +23,8 @@ Live Server -Ritwick Dey
 Auto Rename Tag -Jun Han
 Prettier - Code formatter -Prettier
 PHP Namespace Resolver -Mehedi Hassan
+Bootstrap 5 Quick Snippets -Anbuselvan Rocky
+Laravel Extension Pack -Winnie Lin
         </textarea>
       </div>
     </div>
