--- a/github.html
+++ b/github.html
@@ -120,6 +120,40 @@ abc
 | --- | --- |
 | Arman | arman.p2c@gmail.com |
 
+MULTIPLE GIT ACCOUNT USE
+----------------------------------------------------------------------------------
+local
+----------------------------------------------------------------------------------
+ssh-keygen -t ed25519 -C "arman.hub.bd@gmail.com"
+C:\Users\HP/.ssh/id_ed25519_arman9022
+now open the file "id_ed25519_arman9022.pub" copy and paste in remote SSH key
+
+create a file "config" in .ssh
+---------------------------------
+Host arman9022 github.com
+	HostName github.com
+	PreferredAuthentications publickey
+	IdentityFile ~/.ssh/id_ed25519_arman9022
+
+Host arman109022 github.com
+	HostName github.com
+	PreferredAuthentications publickey
+	IdentityFile ~/.ssh/id_ed25519_arman109022
+
+git clone 
+git@github.com:arman9022/team_test.git
+git@arman9022:arman9022/team_test.git
+yes
+
+/.ssh
+ssh-add .\id_ed25519_arman9022
+
+----------------------------------------------------------------------------------
+remote 
+----------------------------------------------------------------------------------
+go to 
+Settings -> SSH and GPG keys ->
+for test, create a new private repo
 
         </textarea>
       </div>
