--- a/github.html
+++ b/github.html
@@ -81,6 +81,11 @@ git reset --hard HEAD^ (ager commit er obosthay cole jabe)
 git push origin master (local e kaj kora hole jkn online e seta upload korte hoy)
           
 code . ()
+		
+-----------------------
+Team Work
+-----------------------
+Settings -> Collaborators -> add_people
         
 MARKDOWN
 
