--- a/vs_code.html
+++ b/vs_code.html
@@ -20,11 +20,36 @@ alt+down_arrow ->[exchange this line]
 Extensions
 ----------------------------------------------
 Live Server -Ritwick Dey
+
 Auto Rename Tag -Jun Han
-Prettier - Code formatter -Prettier
-PHP Namespace Resolver -Mehedi Hassan
-Bootstrap 5 Quick Snippets -Anbuselvan Rocky
+Beautify -HookyQR
+Prettier - Code formatter -Prettier        
+Rainbow Brackets -A rainbow brackets extension for VS Code.
+
+Bootstrap 5 Quick Snippets -Anbuselvan Rocky  
+
+vscode-icons -VSCode Icons Team
+          
+gi -Hasit Mistry
+
 Laravel Extension Pack -Winnie Lin
+1 Laravel Blade Snippets
+2 Laravel Snippets
+3 Laravel Artisan
+4 Laravel goto view
+5 Laravel-jump-controller
+6 Laravel Extra Intellisense
+7 DotENV
+8 EditorConfig for VS Code
+9 Laravel Blade formatter
+10 Laravel Create View
+11 Laravel Blade Wrapper
+12 Laravel-goto-components
+
+Laravel Blade Spacer -Austen Cameron
+PHP Intelephense -Ben Mewburn
+PHP Namespace Resolver -Mehedi Hassan
+
         </textarea>
       </div>
     </div>
