--- a/vs_code.html
+++ b/vs_code.html
@@ -23,7 +23,8 @@ Live Server -Ritwick Dey
 
 Auto Rename Tag -Jun Han
 Beautify -HookyQR
-Prettier - Code formatter -Prettier        
+Prettier - Code formatter -Prettier  
+[right click -> Format Document With -> Prettier / Settings -> searc"format in user -> Default Formatter -> Prettier, Format on Save -> Enable"]
 Rainbow Brackets -A rainbow brackets extension for VS Code.
 
 Bootstrap 5 Quick Snippets -Anbuselvan Rocky  
