--- a/vs_code.html
+++ b/vs_code.html
@@ -11,7 +11,12 @@
   <body>
     <div class="container pt-4">
       <div class="row">
-        <textarea cols="200" rows="20" class="form-control">                                                      
+        <textarea cols="200" rows="20" class="form-control"> 
+Settings
+---------------------------------
+auto save -> afterDelay
+tab size -> 2
+                                                     
 shift+alt+f  ->[auto indent]
 ctrl+/  ->[comment for all]
 shift+alt+down_arrow  ->[duplicate line or selected]
