--- a/simple_multi_auth.html
+++ b/simple_multi_auth.html
@@ -13,6 +13,7 @@
       <div class="row">
         <textarea cols="200" rows="20" class="form-control"> 
 composer create-project laravel/laravel example-app
+-> got to work_place ->
 composer require laravel/breeze --dev
 php artisan breeze:install
 
