--- a/simple_multi_auth.html
+++ b/simple_multi_auth.html
@@ -30,7 +30,7 @@ php artisan serve
 -----------------------------------------------------------------------
 2
 -----------------------------------------------------------------------
-composer create-project laravel/laravel multi_auth
+composer create-project laravel/laravel two_auth
       
 database config -> .end 
 database/migration/users
