--- a/simple_multi_auth.html
+++ b/simple_multi_auth.html
@@ -109,6 +109,7 @@ npm install
 npm run dev 
           
 app/Models/User.php
+use Illuminate\Database\Eloquent\Casts\Attribute;
     protected $fillable = [
         'name',
         'email',
