--- a/simple_multi_auth.html
+++ b/simple_multi_auth.html
@@ -107,6 +107,8 @@ composer require laravel/ui
 php artisan ui bootstrap --auth   
 npm install
 npm run dev 
+npm install --save-dev vite laravel-vite-plugin
+npm run build
           
 app/Models/User.php
 use Illuminate\Database\Eloquent\Casts\Attribute;
