--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                   <a href="./slug.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Slug</a>
                   <a href="./nice_admin_sidebar.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">nice_admin_sidebar</a>
                   <a href="./messanger_connect_website.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Messanger Connect Website</a>
-                  <a href="./simple_multi_auth.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">simple_multi_auth</a>
+                  <a href="./authentication.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Authentication</a>
                   <a href="./livewire.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Livewire</a>
                   <a href="./my_bootstrap_dashboard.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">my_bootstrap_dashboard</a>
                   <a href="./one_form_submit_multiple_data_store.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">one_form_submit_multiple_data_store</a>
