--- a/authentication.html
+++ b/authentication.html
@@ -54,6 +54,7 @@ public function index(){
     $type = Auth::user()->type;
     if($type=='user'){ return view('user'); }
     else if($type=='admin'){ return view('admin'); }
+    else{ return view('welcome'); }
   }
 }
 
