--- a/authentication.html
+++ b/authentication.html
@@ -52,8 +52,8 @@ use App\Models\User;
 public function index(){
   if(Auth::id()){
     $type = Auth::user()->type;
-    if($type=='user'){ return view('user'); }
-    else if($type=='admin'){ return view('admin'); }
+    if($type=='user'){ return view('user_dashboard'); }
+    else if($type=='admin'){ return view('admin_dashboard'); }
   }
   else{ return view('welcome'); }
 }
@@ -62,7 +62,8 @@ web.php
 use App\Http\Controllers\HomeController;
 Route::get('/home',[HomeController::class, 'index']);
 
-
+resources/views/user_dashboard.blade.php
+resources/views/admin_dashboard.blade.php
 -----------------------------------------------------------------------
 2
 -----------------------------------------------------------------------
