--- a/authentication.html
+++ b/authentication.html
@@ -68,7 +68,7 @@ resources/views/admin_dashboard.blade.php
 welcome.blade.php
 '/home'
 -----------------------------------------------------------------------
-BREEZE TWO AUTH - MIDDLEWARE
+BREEZE TWO AUTH - CUSTOM MIDDLEWARE
 -----------------------------------------------------------------------
 composer create-project laravel/laravel auth
       
@@ -133,7 +133,7 @@ resources/views/welcome.blade.php
 @endif
 
 -----------------------------------------------------------------------
-UI MULTI AUTH - MIDDLEWARE
+UI MULTI AUTH - CUSTOM MIDDLEWARE
 -----------------------------------------------------------------------
 composer create-project laravel/laravel multi_auth
       
