--- a/export_excel.html
+++ b/export_excel.html
@@ -15,7 +15,7 @@
 https://www.itsolutionstuff.com/post/laravel-9-import-export-excel-and-csv-file-tutorialexample.html
           
 composer require maatwebsite/excel
-
+composer require maatwebsite/excel:^3.1
 composer require maatwebsite/excel:*
 composer.json
 "maatwebsite/excel": "3.1.48",
