--- a/create_blade.html
+++ b/create_blade.html
@@ -43,11 +43,11 @@
                     <div class="row">
                     <div class="col-md-4 mb-3">
                         <label class="form-label">Image</label>
-                        <input type="file" name="image" class="form-control">
+                        <input type="file" name="image" accept="image/*" class="form-control"> accept="video/*"
                     </div>
                     <div class="col-md-4 mb-3">
                         <label class="form-label">PDF</label>
-                        <input type="file" name="file" class="form-control">
+                        <input type="file" name="file" accept=".pdf" class="form-control">
                     </div>
                     <div class="col-md-8 mb-3">
                         <label class="form-label">Title</label>
