--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
                   <a href="./wordpress.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">wordpress</a>
                   <a href="./scroll_top.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">scroll_top</a>
                   <a href="./pc.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">PC Faster</a>
+                  <a href="./permission_error.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Permission Error</a>
                   <a href="./" class="btn btn-outline-success fw-bold mb-2" target="_blank"></a>
+
 
 
                   
